2008-02-15  Carlos Garcia Campos  <carlosgc@gsyc.escet.urjc.es>

	* pycvsanaly/DBContentHandler.py:
	* pycvsanaly/SVNParser.py:

	Add some debug messages
	
2008-02-15  Carlos Garcia Campos  <carlosgc@gsyc.escet.urjc.es>

	* pycvsanaly/Config.py:
	* pycvsanaly/Parser.py:
	* pycvsanaly/ParserFactory.py:
	* pycvsanaly/SVNParser.py:
	* pycvsanaly/main.py:
	* pycvsanaly/utils.py:

	Add debug and quiet modes. Add functions to send output to stdout
	and errors to stderr. Fix some error handling issues.
	
2008-02-15  Carlos Garcia Campos  <carlosgc@gsyc.escet.urjc.es>

	* pycvsanaly/config_files.py: Removed
	* pycvsanaly/repository.py: Removed
	* pycvsanaly/tables.py: Removed
	* pycvsanaly/main.py:
	* pycvsanaly/utils.py:

	Remove deprecated stuff.
	
2008-02-15  Carlos Garcia Campos  <carlosgc@gsyc.escet.urjc.es>

	* pycvsanaly/Database.py:

	Use utf8 as character set in mysql databases.
	
2008-02-15  Carlos Garcia Campos  <carlosgc@gsyc.escet.urjc.es>

	* pycvsanaly/FindProgram.py:
	* pycvsanaly/GitParser.py:
	* pycvsanaly/SVNParser.py:

	Add FindProgram from misc and use it in both git and svn backends.
	
2008-02-13  Carlos Garcia Campos  <carlosgc@gsyc.escet.urjc.es>

	* pycvsanaly/Database.py:

	Update some field sizes.
	
2008-02-13  Carlos Garcia Campos  <carlosgc@gsyc.escet.urjc.es>

	* pycvsanaly/ContentHandler.py:
	* pycvsanaly/DBContentHandler.py:
	* pycvsanaly/Parser.py:

	Use executemany also for commits and call it for both actions and
	commits every 100 actions.
	
2008-02-13  Carlos Garcia Campos  <carlosgc@gsyc.escet.urjc.es>

	* pycvsanaly/DBContentHandler.py:

	Use executemany instead of execute to insert actions
	
2008-02-13  Carlos Garcia Campos  <carlosgc@gsyc.escet.urjc.es>

	* pycvsanaly/CVSParser.py:
	* pycvsanaly/DBContentHandler.py:
	* pycvsanaly/Database.py:
	* pycvsanaly/ParserFactory.py:
	* pycvsanaly/main.py:

	Several performance improvements. CVSAnaly core doesn't use storm
	anymore.
	